--- a/index.html
+++ b/index.html
@@ -6,6 +6,18 @@
     <title>Document</title>
 </head>
 <body>
-    <div>there is nothing today.</div>
+    <h1>Алекса́ндр Васи́льевич Суво́ров</h1>
+    <hr>
+    <li>Учение в счастии человека украшает, в несчастии же служит прибежищем.</li>
+    <li>Без добродетели нет ни славы, ни чести.</li>
+    <li>Разумный человек в стыд не вменяет учиться и в совершенных летах, чему не доучился во младости.</li>
+    <li>Нет стыда признаться человеку в своей ошибке.</li>
+    <li>Искренность отношений, правда в общении — вот дружба.</li>
+    <li> Служба и дружба — две параллельные линии: не сходятся.</li>
+    <li>Кто состоянием своим доволен, тому жить весело.</li>
+    <li>Никогда не позволяйте льстецам осаждать вас: давайте почувствовать, что вы не любите ни похвал, ни низостей.</li>
+    <li>Лучше весь век учиться, нежели пребыть незнающим.</li>
+    <li>Вывеска дурака — гордость; людей посредственного ума — подлость; а человека истинных достоинств — возвышенность чувств, прикрытая скромностью.</li>
+    <button>Возьми меня с собой, Никита.</button>
 </body>
 </html>
